# internal/router/helloWorld.go
@@ -6,7 +6,7 @@ import "github.com/HoronLee/EchoHub/internal/handler"
 func setupV1HelloWorldRoutes(routerGroup *VersionedRouterGroup, h *handler.Handlers) {
 	// Public routes - 公开路由，无需认证
 	// 路径: POST /api/v1/helloworld
-	routerGroup.PublicRouterGroup.POST("/helloworld", h.HelloWorldHandler.PostHelloWorld())
+	routerGroup.PublicRouter.POST("/helloworld", h.HelloWorldHandler.PostHelloWorld())
 
 	// Private routes - 私有路由，需要 JWT 认证
 	// 可以在这里添加需要认证的 HelloWorld 相关路由
