# internal/swagger/swagger.yaml
@@ -8,7 +8,7 @@ definitions:
         minLength: 1
         type: string
     required:
-      - message
+    - message
     type: object
   helloworld.CreateResponse:
     properties:
@@ -44,8 +44,8 @@ definitions:
         example: john_doe
         type: string
     required:
-      - password
-      - username
+    - password
+    - username
     type: object
   user.LoginResponse:
     properties:
@@ -65,8 +65,8 @@ definitions:
         minLength: 3
         type: string
     required:
-      - password
-      - username
+    - password
+    - username
     type: object
 host: localhost:8080
 info:
@@ -74,7 +74,7 @@ info:
     email: support@echohub.dev
     name: EchoHub Team
     url: https://github.com/HoronLee/EchoHub
-  description: 基于Gin、Gorm、Viper、Wire、Cobra的HTTP快速开发框架 API 文档
+  description: 基于Echo、Gorm、Viper、Wire、Cobra的HTTP快速开发框架 API 文档
   license:
     name: MIT
     url: https://opensource.org/licenses/MIT
@@ -84,131 +84,111 @@ paths:
   /helloworld:
     post:
       consumes:
-        - application/json
+      - application/json
       description: 创建一个新的HelloWorld消息并返回系统信息
       parameters:
-        - description: HelloWorld创建请求参数
-          in: body
-          name: request
-          required: true
-          schema:
-            $ref: "#/definitions/helloworld.CreateRequest"
+      - description: HelloWorld创建请求参数
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/helloworld.CreateRequest'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: 创建成功，返回消息和系统信息
           schema:
-            allOf:
-              - $ref: "#/definitions/response.Response"
-              - properties:
-                  data:
-                    $ref: "#/definitions/helloworld.CreateResponse"
-                type: object
+            $ref: '#/definitions/helloworld.CreateResponse'
         "400":
           description: 请求参数错误或创建失败
           schema:
-            $ref: "#/definitions/response.Response"
+            $ref: '#/definitions/response.Response'
       summary: 创建HelloWorld消息
       tags:
-        - HelloWorld
+      - HelloWorld
   /user/delete:
     delete:
       consumes:
-        - application/json
+      - application/json
       description: 删除当前登录的用户账户
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: 删除成功
           schema:
-            allOf:
-              - $ref: "#/definitions/response.Response"
-              - properties:
-                  data:
-                    additionalProperties:
-                      type: string
-                    type: object
-                type: object
+            additionalProperties:
+              type: string
+            type: object
         "400":
           description: 用户未认证或删除失败
           schema:
-            $ref: "#/definitions/response.Response"
+            $ref: '#/definitions/response.Response'
         "401":
           description: 用户未认证
           schema:
-            $ref: "#/definitions/response.Response"
+            $ref: '#/definitions/response.Response'
       security:
-        - BearerAuth: []
+      - BearerAuth: []
       summary: 删除用户
       tags:
-        - 用户管理
+      - 用户管理
   /user/login:
     post:
       consumes:
-        - application/json
+      - application/json
       description: 用户身份验证并获取访问令牌
       parameters:
-        - description: 登录请求参数
-          in: body
-          name: request
-          required: true
-          schema:
-            $ref: "#/definitions/user.LoginRequest"
+      - description: 登录请求参数
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/user.LoginRequest'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: 登录成功，返回JWT令牌
           schema:
-            allOf:
-              - $ref: "#/definitions/response.Response"
-              - properties:
-                  data:
-                    $ref: "#/definitions/user.LoginResponse"
-                type: object
+            $ref: '#/definitions/user.LoginResponse'
         "400":
           description: 请求参数错误或登录失败
           schema:
-            $ref: "#/definitions/response.Response"
+            $ref: '#/definitions/response.Response'
       summary: 用户登录
       tags:
-        - 用户管理
+      - 用户管理
   /user/register:
     post:
       consumes:
-        - application/json
+      - application/json
       description: 创建新用户账户
       parameters:
-        - description: 注册请求参数
-          in: body
-          name: request
-          required: true
-          schema:
-            $ref: "#/definitions/user.RegisterRequest"
+      - description: 注册请求参数
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/user.RegisterRequest'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: 注册成功
           schema:
-            allOf:
-              - $ref: "#/definitions/response.Response"
-              - properties:
-                  data:
-                    additionalProperties:
-                      type: string
-                    type: object
-                type: object
+            additionalProperties:
+              type: string
+            type: object
         "400":
           description: 请求参数错误或注册失败
           schema:
-            $ref: "#/definitions/response.Response"
+            $ref: '#/definitions/response.Response'
       summary: 用户注册
       tags:
-        - 用户管理
+      - 用户管理
 schemes:
-  - http
-  - https
+- http
+- https
 swagger: "2.0"
